fix: dark mode toggle inconsistent positioning

--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -113,7 +113,5 @@ main.main {
 }
 
 .main-grid {
-    @media (max-width: $on-phone) {
-        flex-direction: column;
-    }
+    min-height: 100vh;
 }
